Reworks file loading to allow for configurable resources root